<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.riset.RisetDataActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                style="@style/TitleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgBack"
                android:text="@string/data_riset" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/penjelasan_data_riset"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                style="@style/RisetData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/riset_1" />

            <TextView
                style="@style/RisetData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/riset_2" />

            <TextView
                style="@style/RisetData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/riset_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/manfaat_data_riset"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                style="@style/RisetData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_manfaat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_1" />

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manfaat_1" />
                </LinearLayout>

                <TextView
                    style="@style/Manfaat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manfaat_1_desc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_2" />

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manfaat_2" />
                </LinearLayout>

                <TextView
                    style="@style/Manfaat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manfaat_2_desc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_3" />

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manfaat_3" />
                </LinearLayout>

                <TextView
                    style="@style/Manfaat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manfaat_3_desc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_4" />

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manfaat_4" />
                </LinearLayout>

                <TextView
                    style="@style/Manfaat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manfaat_4_desc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_5" />

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manfaat_5" />
                </LinearLayout>

                <TextView
                    style="@style/Manfaat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manfaat_5_desc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_6" />

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manfaat_6" />
                </LinearLayout>

                <TextView
                    style="@style/Manfaat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manfaat_6_desc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:text="@string/_7" />

                    <TextView
                        style="@style/RisetData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/manfaat_7" />
                </LinearLayout>

                <TextView
                    style="@style/Manfaat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="48dp"
                    android:text="@string/manfaat_7_desc" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>