<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GuideActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                style="@style/TitleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgBack"
                android:text="@string/guide" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/help_guide"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Panduan"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_1" />

                <TextView
                    style="@style/Panduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_panduan_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Panduan"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_2" />

                <TextView
                    style="@style/Panduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_panduan_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Panduan"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_3" />

                <TextView
                    style="@style/Panduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_panduan_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Panduan"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_4" />

                <TextView
                    style="@style/Panduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_panduan_4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Panduan"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_5" />

                <TextView
                    style="@style/Panduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_panduan_5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Panduan"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_6" />

                <TextView
                    style="@style/Panduan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_panduan_6" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>