<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ShopeeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                style="@style/TitleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgBack"
                android:text="@string/shopee" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <WebView
        android:id="@+id/webViewShopee"
        android:layout_marginTop="-24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/etSearchShopee"
        android:layout_below="@id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_search_outline"
        android:drawablePadding="8dp"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:lines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="@color/primary_text"
        android:textSize="14sp" />
</RelativeLayout>