<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.blibli.BlibliActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                style="@style/TitleToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imgBack"
                android:text="@string/blibli" />

            <ImageView
                android:id="@+id/imgDownload"
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:padding="3dp"
                android:src="@drawable/ic_download" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_search_outline"
        android:drawablePadding="8dp"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="textCapWords"
        android:lines="1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/primary_text"
        android:textSize="14sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_blibli" />
</LinearLayout>